--- a/ui/src/app/views/projectv2/sidebar/project.sidebar.scss
+++ b/ui/src/app/views/projectv2/sidebar/project.sidebar.scss
@@ -1,92 +1,65 @@
-.sidebar {
-  width: 300px;
-  height: 100%;
-  border-right: 1px solid;
-  border-right-color: rgba(79, 79, 79, 0.2);
+:host {
+    width: 100%;
+    height: 100%;
+    display: block;
 
-  .filter {
-    padding-top: 10px;
+    .filter {
+        padding-top: 10px;
 
-    nz-select {
-      width: 280px;
-      margin-left: 10px;
-      margin-bottom: 10px;
-    }
-  }
-
-  .collapse {
-    display: flex;
-    width: 300px;
-    flex-direction: column;
-    background-color: #ffffff0a;
-    border: 1px solid #d9d9d9;
-    border-left: 0;
-    border-radius: 2px;
-
-    :host-context(.night) & {
-      border: 1px solid #434343;
-
+        nz-select {
+            width: 280px;
+            margin-left: 10px;
+            margin-bottom: 10px;
+        }
     }
 
-    .panel {
-      .header {
-        padding: 12px 16px;
-        height: 46px;
+    .collapse {
         display: flex;
-        border-bottom: 1px solid #d9d9d9;
-        border-radius: 2px;
-        background-color: #fafafa;
+        flex-direction: column;
+        background-color: #ffffff0a;
 
-        :host-context(.night) & {
-          background-color: #202020;
-          border-bottom: 1px solid #434343;
+        .panel {
+            .header {
+                padding: 12px 16px;
+                height: 46px;
+                display: flex;
+                background-color: #fafafa;
+
+                :host-context(.night) & {
+                    background-color: #202020;
+                }
+
+                .refresh {
+                    margin-left: auto;
+                }
+
+                i {
+                    font-size: 12px;
+                    margin-right: 10px;
+                }
+            }
+
+            .content {
+                background-color: #fff;
+                overflow-y: auto;
+
+                :host-context(.night) & {
+                    background-color: #141414;
+                }
+            }
         }
 
-        .refresh {
-          margin-left: auto;
+        .panel.expanded {
+            margin-bottom: auto;
+            height: 100%;
         }
 
-        i {
-          font-size: 12px;
-          margin-right: 10px;
-        }
-      }
-      .content {
-        padding: 16px 5px 16px 5px;
-        background-color: #fff;
-        border-bottom: 1px solid #d9d9d9;
-        overflow-y: auto;
+        .panel.collapsed {
+            height: 46px;
 
-        :host-context(.night) & {
-          background-color: #141414;
-          border-bottom: 1px solid #434343;
+            .content {
+                display: none;
+            }
         }
-      }
     }
-    .panel.expanded {
-      margin-bottom: auto;
-      height: 100%;
-      border-radius: 2px;
-    }
-    .panel.collapsed {
-      height: 46px;
-      .content {
-        display: none;
-      }
-    }
-    .panel.collapsed:not(:first) {
-      .header {
-        border-top: 1px solid #d9d9d9;
-        border-bottom: 0;
-        border-radius: 2px;
-
-        :host-context(.night) & {
-          border-top: 1px solid #434343;
-        }
-      }
-    }
-  }
 }
-
-
-
