--- a/ui/src/app/views/projectv2/vcs/repository/workermodel/show/project.workermodel.show.scss
+++ b/ui/src/app/views/projectv2/vcs/repository/workermodel/show/project.workermodel.show.scss
@@ -1,21 +1,18 @@
-.workerModelShow {
+:host {
     display: flex;
     flex-direction: column;
     height: 100%;
     overflow: hidden;
 
-    h3 {
-        padding: 10px 30px;
-    }
-
     .workerModel-container {
         flex: 1;
+        width: 100%;
         overflow-y: hidden;
-        padding: 10px 30px;
     }
 
     .footer {
         display: flex;
+        flex-direction: row;
         height: 46px;
         border-top: 1px solid #d9d9d9;
         padding: 7px 30px;
@@ -26,13 +23,14 @@
 
         .buttons {
             margin-left: auto;
+
             button {
                 margin-left: 10px;
             }
         }
     }
-}
 
-nz-spin {
-    margin-top: 50px;
+    nz-spin {
+        margin-top: 50px;
+    }
 }
