--- a/ui/src/app/shared/entity/form/form-item-conditional/json-form-field-conditional.html
+++ b/ui/src/app/shared/entity/form/form-item-conditional/json-form-field-conditional.html
@@ -1,7 +1,8 @@
 <ng-container *ngFor="let c of field.condition">
     <ng-container *ngIf="model[c.refProperty] === c.conditionValue">
         <ng-container *ngFor="let f of jsonFormSchema.types[c.type].fields">
-            <app-json-form-field [parentType]="c.type" [jsonFormSchema]="jsonFormSchema" [field]="f" [(model)]="model[field.name]" (modelChange)="emitChange()"></app-json-form-field>
+            <app-json-form-field [disabled]="disabled" [parentType]="c.type" [jsonFormSchema]="jsonFormSchema"
+                [field]="f" [(model)]="model[field.name]" (modelChange)="emitChange()"></app-json-form-field>
         </ng-container>
     </ng-container>
 </ng-container>
