feat(ui): project v2 resizable panels (#6425)

--- a/ui/src/app/shared/entity/entity.form.component.html
+++ b/ui/src/app/shared/entity/entity.form.component.html
@@ -1,6 +1,8 @@
 <ng-container *ngIf="flatSchema && data">
-    <app-json-form parentType="V2WorkerModel" [schema]="flatSchema" [(data)]="data"></app-json-form>
-    <app-resizable-panel defaultSize="400" (onGrabbingStart)="panelStartResize()" (onGrabbingEnd)="panelEndResize()">
+    <app-json-form [class.disableSelection]="resizing" [disabled]="resizing" parentType="V2WorkerModel"
+        [schema]="flatSchema" [(data)]="data"></app-json-form>
+    <app-resizable-panel minSize="400" [initialSize]="panelSize" (onGrabbingStart)="panelStartResize()"
+        (onGrabbingEnd)="panelEndResize($event)">
         <nz-tabset nzType="card" nzSize="small">
             <nz-tab [nzTitle]="path"></nz-tab>
         </nz-tabset>
