--- a/ui/src/app/views/projectv2/project.html
+++ b/ui/src/app/views/projectv2/project.html
@@ -4,8 +4,8 @@
     </div>
     <div class="body">
         <ng-container *ngIf="project">
-            <app-resizable-panel growDirection="after" defaultSize="250" (onGrabbingStart)="panelStartResize()"
-                (onGrabbingEnd)="panelEndResize()">
+            <app-resizable-panel growDirection="after" minSize="250" [initialSize]="panelSize"
+                (onGrabbingStart)="panelStartResize()" (onGrabbingEnd)="panelEndResize($event)">
                 <app-projectv2-sidebar class="sidebar" [project]="project"></app-projectv2-sidebar>
             </app-resizable-panel>
             <div class="content">
