--- a/ui/src/app/shared/entity/form/form-item/json-form-field.html
+++ b/ui/src/app/shared/entity/form/form-item/json-form-field.html
@@ -18,7 +18,7 @@
 <!-- SIMPLE FIELD -->
 <nz-form-item *ngIf="field && model && jsonFormSchema && field.type !== 'object'">
     <!-- FORM LABEL -->
-    <nz-form-label nzSpan="4">
+    <nz-form-label nzFlex="120px">
         <span *ngIf="required" class="red">{{ '* '}}</span>
         {{field.name.charAt(0).toUpperCase() + field.name.substring(1, field.name.length)}}
         <i *ngIf="field?.description" nz-icon nzType="info-circle" nzTheme="outline"
@@ -26,7 +26,7 @@
     </nz-form-label>
 
     <!-- FORM VALUE -->
-    <nz-form-control nzSpan="20">
+    <nz-form-control>
         <ng-container *ngIf="field.type === 'string' && !field.enum">
             <input nz-input name="{{field.name}}" [disabled]="disabled" [(ngModel)]="model[field.name]"
                 (ngModelChange)="emitChange()">
