--- a/ui/src/app/shared/entity/form/form-item/json-form-field.html
+++ b/ui/src/app/shared/entity/form/form-item/json-form-field.html
@@ -1,38 +1,44 @@
 <!-- OBJECT FIELD -->
-<ng-container *ngIf="field && model && jsonFormSchema && field.type === 'object'">
+<ng-container *ngIf="field && currentModel && jsonFormSchema && field.type === 'object'">
     <h3>{{field.name.charAt(0).toUpperCase() + field.name.substring(1, field.name.length)}}</h3>
     <ng-container *ngIf="field?.condition?.length > 0; else tmplNoCondition">
-        <app-json-form-field-conditional [jsonFormSchema]="jsonFormSchema" [field]="field" [disabled]="disabled"
-            [(model)]="model"
-            (modelChange)="updateParentModel(field.name, model[field.name])"></app-json-form-field-conditional>
+        <ng-container *ngFor="let c of field.condition">
+            <ng-container *ngIf="currentModel[c.refProperty] === c.conditionValue">
+                <ng-container *ngFor="let f of jsonFormSchema.types[c.type].fields">
+                    <app-json-form-field [disabled]="disabled" [parentType]="c.type" [jsonFormSchema]="jsonFormSchema"
+                        [field]="f" [model]="currentModel[field.name]"
+                        (modelChange)="onValueChanged($event)"></app-json-form-field>
+                </ng-container>
+            </ng-container>
+        </ng-container>
     </ng-container>
     <ng-template #tmplNoCondition>
         <ng-container *ngFor="let f of jsonFormSchema.types[field.objectType].fields">
             <app-json-form-field [parentType]="field.objectType" [jsonFormSchema]="jsonFormSchema" [field]="f"
-                [(model)]="model[field.name]"
-                (modelChange)="updateParentModel(field.name, model[field.name])"></app-json-form-field>
+                [model]="currentModel[field.name]" (modelChange)="onValueChanged($event)"></app-json-form-field>
         </ng-container>
     </ng-template>
 </ng-container>
 
 <!-- SIMPLE FIELD -->
-<nz-form-item *ngIf="field && model && jsonFormSchema && field.type !== 'object'">
+<nz-form-item *ngIf="field && currentModel && jsonFormSchema && field.type !== 'object'">
     <!-- FORM LABEL -->
     <nz-form-label nzSpan="4">
         <span *ngIf="required" class="red">{{ '* '}}</span>
         {{field.name.charAt(0).toUpperCase() + field.name.substring(1, field.name.length)}}
         <i *ngIf="field?.description" nz-icon nzType="info-circle" nzTheme="outline"
-            nz-tooltip="{{field?.description}}"></i>
+            [nz-tooltip]="field?.description"></i>
     </nz-form-label>
 
     <!-- FORM VALUE -->
     <nz-form-control nzSpan="20">
         <ng-container *ngIf="field.type === 'string' && !field.enum">
-            <input nz-input name="{{field.name}}" [disabled]="disabled" [(ngModel)]="model[field.name]"
-                (ngModelChange)="emitChange()">
+            <input nz-input [name]="field.name" [disabled]="disabled" [ngModel]="currentModel[field.name]"
+                (ngModelChange)="onValueChanged($event)">
         </ng-container>
         <ng-container *ngIf="field.enum">
-            <nz-select [disabled]="disabled" [(ngModel)]="model[field.name]" (ngModelChange)="emitChange()">
+            <nz-select [disabled]="disabled" [ngModel]="currentModel[field.name]"
+                (ngModelChange)="onValueChanged($event)">
                 <nz-option *ngFor="let e of field.enum" [nzLabel]="e" [nzValue]="e"></nz-option>
             </nz-select>
         </ng-container>
