--- a/ui/src/app/shared/entity/form/form-item/json-form-field.html
+++ b/ui/src/app/shared/entity/form/form-item/json-form-field.html
@@ -1,22 +1,20 @@
 <!-- OBJECT FIELD -->
 <ng-container *ngIf="field && currentModel && jsonFormSchema && field.type === 'object'">
     <h3>{{field.name.charAt(0).toUpperCase() + field.name.substring(1, field.name.length)}}</h3>
-    <ng-container *ngIf="field?.condition?.length > 0; else tmplNoCondition">
-        <ng-container *ngFor="let c of field.condition">
-            <ng-container *ngIf="currentModel[c.refProperty] === c.conditionValue">
-                <ng-container *ngFor="let f of jsonFormSchema.types[c.type].fields">
-                    <app-json-form-field [disabled]="disabled" [parentType]="c.type" [jsonFormSchema]="jsonFormSchema"
-                        [field]="f" [model]="currentModel[field.name]"
-                        (modelChange)="onValueChanged($event)"></app-json-form-field>
-                </ng-container>
-            </ng-container>
+    <ng-container *ngIf="isConditionnal; else tmplNoCondition">
+        <ng-container *ngIf="selectedCondition">
+            <app-json-form-field *ngFor="let f of jsonFormSchema.types[selectedCondition.type].fields"
+                [disabled]="disabled" [parentType]="selectedCondition.type" [jsonFormSchema]="jsonFormSchema"
+                [field]="f" [model]="currentModel[field.name]"
+                (modelChange)="onValueChanged($event)"></app-json-form-field>
         </ng-container>
+        <nz-alert *ngIf="!selectedCondition" nzType="info"
+            nzDescription="Please select a value for field '{{conditionRefProperties}}'" nzShowIcon></nz-alert>
     </ng-container>
     <ng-template #tmplNoCondition>
-        <ng-container *ngFor="let f of jsonFormSchema.types[field.objectType].fields">
-            <app-json-form-field [parentType]="field.objectType" [jsonFormSchema]="jsonFormSchema" [field]="f"
-                [model]="currentModel[field.name]" (modelChange)="onValueChanged($event)"></app-json-form-field>
-        </ng-container>
+        <app-json-form-field *ngFor="let f of jsonFormSchema.types[field.objectType].fields"
+            [parentType]="field.objectType" [jsonFormSchema]="jsonFormSchema" [field]="f"
+            [model]="currentModel[field.name]" (modelChange)="onValueChanged($event)"></app-json-form-field>
     </ng-template>
 </ng-container>
 
@@ -31,10 +29,10 @@
     </nz-form-label>
 
     <!-- FORM VALUE -->
-    <nz-form-control>
+    <nz-form-control nzErrorTip="Pattern should match {{field.pattern}}">
         <ng-container *ngIf="field.type === 'string' && !field.enum">
-            <input nz-input [name]="field.name" [disabled]="disabled" [ngModel]="currentModel[field.name]"
-                (ngModelChange)="onValueChanged($event)">
+            <input nz-input [pattern]="field.pattern" [name]="field.name" [disabled]="disabled"
+                [ngModel]="currentModel[field.name]" (ngModelChange)="onValueChanged($event)">
         </ng-container>
         <ng-container *ngIf="field.enum">
             <nz-select [disabled]="disabled" [ngModel]="currentModel[field.name]"
